Update images and text

--- a/_posts/2021-01-01-post1.md
+++ b/_posts/2021-01-01-post1.md
@@ -1,6 +1,16 @@
 ---
-title: Test Article 1
-tags: ["Smart Farming", "Regulations"]
+title: How many landings in a day?
+tags:
+published: true
 ---
 
-Aero Fleet One was born in 2013 when the founder, Mark Erjavec, met a UAS developer named Yuri Pederii. At the time, Yuri was developing the AeroDrone DR-20, a smaller predecessor to his current work with UAVITA. Mark saw potential in the unique fixed-wing, gas-powered drone technology as the pathway to making unmanned aircraft that would one day be able to accomplish the same tasks as manned aircraft. He bought a DR-20 as a way to support Yuri’s work and kept up with the development team’s progress over the years. In this process, he created Aero Fleet One, with a vision to someday have the world’s largest fleet of autonomous drones performing aerial services at superior levels. Much time has passed since then, and Aero Fleet One is grateful to Yuri for his contributions of technology and inspiration, though the companies are no longer associated. Towards the end of 2020, it came time to start making Mark’s dream a reality. Aero Fleet One’s core team was brought together to get it into place.
+As light emerges from the horizon and the morning dew creates a sparkle upon each blade of grass, a new day workday has begun for agriculture pilots all across the world. The serene morning air is disrupted by the sounds of gusting winds coming from the propellers on an ag plane.
+
+Comparing an ag pilot’s logbook to a typical commercial pilot, you’ll notice substantially more landing entries for an ag pilot. This is due to the number of trips these aviators take every day, especially during peak growing seasons. Quick and effective aerial application is necessary when disease and pests plague the crops. During peak seasons ag pilots can make dozens of take-offs a day to ensure timely application, flying for an average of 10 hours a day and covering 2000 acres of land.
+
+This extremely demanding designation of work includes duties such as taking off from mud and uneven ground, often landing with a tailwind, flying along at 100-200 mph while spraying just 6 feet above the ground, and making 70-to-80-degree sharp turns all while keeping their patterns and avoiding obstacles. These hardworking pilots manage to complete this risky job day in and day out because they are experienced professionals with thousands of logged flight hours. They hold a commercial pilot’s license and state pesticide licensing. Ag planes carry a multitude of different payloads including hundreds of gallons of pesticides, herbicides, water, and seeds.
+
+Ag pilots need a tremendously skillful and experienced work crew surrounding them in order to accomplish each daily task. For example, maintenance crews perform regular inspections and repairs to the aircraft in order to ensure that it is fully functional for the demanding tasks throughout the whole workday. However, the pilot always does a critical pre-flight evaluation on their own. The modern ag aircrafts fly faster than ever, and the ground crew makes sure fuel and chemical loaders are always ready to load the aircraft to reduce the turnaround time between flights.
+The path for each flight is predetermined. A relatively new advancement includes uploading the field pattern onto a USB drive so that the pilot can connect it to a special system in the cockpit that includes GPS, field mapping, and nozzle calculators to ensure precise aerial application. All around the world, there are millions of acres of farmland and rural valleys that need to be planted, treated, and protected. Because of varying weather conditions, the special system located inside of ag planes is a key component of this entire operation.
+
+Some many people and systems make it possible to fly this many fields in a day, but make no mistake, it only happens because these pilots are some of the most capable there are. Ag pilots work by acres not hours, so this job requires a high level of training, expertise, dedication, and endurance.
